[gd_scene load_steps=28 format=2]

[ext_resource path="res://TitleAssets/NewGame_1.png" type="Texture" id=1]
[ext_resource path="res://TitleAssets/LoadGame_0.png" type="Texture" id=2]
[ext_resource path="res://TitleAssets/Exit_1.png" type="Texture" id=3]
[ext_resource path="res://Title_and_Menu/MenuLoadFile.gd" type="Script" id=4]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=5]
[ext_resource path="res://TitleAssets/Exit_0.png" type="Texture" id=6]
[ext_resource path="res://EntanglementBit/RedEntanglementBitFloating.png" type="Texture" id=7]
[ext_resource path="res://TitleAssets/mute-audio-sheet.png" type="Texture" id=8]
[ext_resource path="res://TitleAssets/pixil-frame-0.png" type="Texture" id=9]
[ext_resource path="res://TitleAssets/LoadGame_1.png" type="Texture" id=10]
[ext_resource path="res://TitleAssets/NewGame_0.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Static",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 10 ) ],
"loop": true,
"name": "Selected",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Static",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 1 ) ],
"loop": true,
"name": "Selected",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Static",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "Selected",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 47, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 47, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 47, 0, 47, 10 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Static",
"speed": 2.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Selected",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 12, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 36, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 60, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 12, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 84, 0, 12, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="MenuLoadFile" type="Node2D"]
position = Vector2( 48, 32 )
script = ExtResource( 4 )

[node name="LoadGame_Item" type="AnimatedSprite" parent="."]
position = Vector2( 16, -16 )
frames = SubResource( 1 )
animation = "Selected"
playing = true

[node name="NewGame_Item" type="AnimatedSprite" parent="."]
position = Vector2( 16, 8 )
frames = SubResource( 2 )
animation = "Static"
playing = true

[node name="Exit_Item" type="AnimatedSprite" parent="."]
position = Vector2( 16, 32 )
frames = SubResource( 3 )
animation = "Static"
playing = true

[node name="Mute_Item" type="AnimatedSprite" parent="."]
position = Vector2( 16, 56 )
scale = Vector2( 1.18085, 1.3 )
frames = SubResource( 7 )
animation = "Static"
playing = true
offset = Vector2( -15, 0 )

[node name="Selection_Particle" type="AnimatedSprite" parent="."]
position = Vector2( -40, -16 )
frames = SubResource( 16 )
frame = 4
playing = true

[node name="ShadowSprite" type="Sprite" parent="Selection_Particle"]
show_behind_parent = true
position = Vector2( 0, 7 )
texture = ExtResource( 5 )
